tdf#109194 cleanse startup notification foo from env

So when the desktop environment does startup notification, this
DESKTOP_STARTUP_ID gets passed on to the launched application.
Problem is, XDG spec says app should read it from the env, then
discard - which LibreOffice never does.

When passed on to child processes, funny effects might ensue, so
let's just erase this at the end of VCL init, when I'm reasonably
sure every gtk/kde/whatnot backend did read it.

Change-Id: I1f758c7a02455028d2b520c144ffe32538621f19
Reviewed-on: https://gerrit.libreoffice.org/40153
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>
(cherry picked from commit 8180b6801dca2052a9d40411f9bbdcc96198c52f)